--- a/sass/common/_footer.scss
+++ b/sass/common/_footer.scss
@@ -94,13 +94,19 @@ _footer.scss
     .footerInfo {
         color: #fff;
         padding-left: 1.5em;
-        text-indent: -1.5em;
+        
+        
+        li{
+            padding-left: 1.5em;
+            text-indent: -1.0em;
+        }
+        
         
         &__lnk {
             color: #fff;
         }
         
-        & span {
+        i {
             margin-right: 5px;
             color: $color-t1;
             font-weight: bold;
