--- a/css/style.css
+++ b/css/style.css
@@ -2419,7 +2419,7 @@ _footer.scss
 }
 .footerWrap .footerInfo {
   color: #fff;
-  padding-left: 1.5em;
+  padding-left: 0.7rem;
 }
 .footerWrap .footerInfo li {
   padding-left: 1.5em;
