--- a/sass/common/_footer.scss
+++ b/sass/common/_footer.scss
@@ -93,7 +93,7 @@ _footer.scss
     
     .footerInfo {
         color: #fff;
-        padding-left: 1.5em;
+        padding-left: .7rem;
         
         
         li{
