--- a/sass/base/_mixin.scss
+++ b/sass/base/_mixin.scss
@@ -131,25 +131,45 @@ FLEX
 /* -----------------------------------------------
 /* [Practicality Rule set]
 -------------------------------------------------- */
+
 /*  fxrow-**
 -------------------------------------------------- */
+
+/* fxrow-** */
 @mixin fxrow{
     @include --fx;
     @include --fxdir-row;
 }
+@mixin fxrow-jsb{
+    @include --fx;
+    @include --fxdir-row;
+    @include --fxjty-between;
+}
 
+/* fxrow-a*-** */
 @mixin fxrow-ac-jc{
     @include --fx;
     @include --fxdir-row;
     @include --fxain-center;
     @include --fxjty-center;
 }
-
+@mixin fxrow-ac-js{
+    @include --fx;
+    @include --fxdir-row;
+    @include --fxain-center;
+    @include --fxjty-start;
+}
 @mixin fxrow-ac-je{
     @include --fx;
     @include --fxdir-row;
     @include --fxain-center;
     @include --fxjty-end;
+}
+@mixin fxrow-ac-jsb{
+    @include --fx;
+    @include --fxdir-row;
+    @include --fxain-center;
+    @include --fxjty-between;
 }
 
 @mixin infxrow-ac-jc{
@@ -158,50 +178,16 @@ FLEX
     @include --fxain-center;
     @include --fxjty-center;
 }
-
-@mixin fxrow-ac-js{
-    @include --fx;
-    @include --fxdir-row;
-    @include --fxain-center;
-    @include --fxjty-start;
-}
-
-@mixin fxrow-ac-jsb{
-    @include --fx;
-    @include --fxdir-row;
-    @include --fxain-center;
-    @include --fxjty-between;
-}
-
 @mixin fxrow-ac{
     @include --fx;
     @include --fxdir-row;
     @include --fxain-center;
 }
-
 @mixin fxroww-ac{
     @include --fx;
     @include --fxdir-row;
     @include --fxwrap;
     @include --fxain-center;
-}
-
-@mixin fxrow-js{
-    @include --fx;
-    @include --fxdir-row;
-    @include --fxjty-start;
-}
-
-@mixin fxrow-je{
-    @include --fx;
-    @include --fxdir-row;
-    @include --fxjty-end;
-}
-
-@mixin fxrow-jc{
-    @include --fx;
-    @include --fxdir-row;
-    @include --fxjty-center;
 }
 
 @mixin fxrow-as-jsb{
@@ -211,32 +197,58 @@ FLEX
     @include --fxjty-between;
 }
 
+
+/* fxrow-j*-** */
+@mixin fxrow-js{
+    @include --fx;
+    @include --fxdir-row;
+    @include --fxjty-start;
+}
+@mixin fxrow-je{
+    @include --fx;
+    @include --fxdir-row;
+    @include --fxjty-end;
+}
+@mixin fxrow-jc{
+    @include --fx;
+    @include --fxdir-row;
+    @include --fxjty-center;
+}
+
+
+
 /*  fxcol-**
 -------------------------------------------------- */
+
+/* fxcol-** */
 @mixin fxcol{
     @include --fx;
     @include --fxdir-col;
 }
-
-@mixin fxcol-ac-jc{
+@mixin fxcol-jsb{
     @include --fx;
     @include --fxdir-col;
-    @include --fxain-center;
-    @include --fxjty-center;
+    @include --fxjty-between;
 }
 @mixin fxcol-jc{
     @include --fx;
     @include --fxdir-col;
     @include --fxjty-center;
 }
-
-
-@mixin fxcol-ac-jsb{
+@mixin fxcol-ac-jc{
     @include --fx;
     @include --fxdir-col;
     @include --fxain-center;
-    @include --fxjty-between;
+    @include --fxjty-center;
 }
+@mixin fxcol-as{
+    @include --fx;
+    @include --fxdir-col;
+    @include --fxain-start;
+}
+
+
+/* fxcol-a*-** */
 @mixin fxcol-ac-js{
     @include --fx;
     @include --fxdir-col;
@@ -249,7 +261,12 @@ FLEX
     @include --fxain-center;
     @include --fxjty-end;
 }
-
+@mixin fxcol-ac-jsb{
+    @include --fx;
+    @include --fxdir-col;
+    @include --fxain-center;
+    @include --fxjty-between;
+}
 
 @mixin fxcol-as-jsb{
     @include --fx;
@@ -263,6 +280,9 @@ FLEX
     @include --fxain-end;
     @include --fxjty-between;
 }
+
+
+
 
 
 /*======================================================================
@@ -335,6 +355,11 @@ TRANSITION
     -webkit-transform: translateY($px); 
     -ms-transform: translateY($px);
     transform: translateY($px);
+}
+@mixin transform-trX($px){
+    -webkit-transform: translateX($px); 
+    -ms-transform: translateX($px);
+    transform: translateX($px);
 }
 
 @mixin transform-ro($deg){
