--- a/css/style.css
+++ b/css/style.css
@@ -1339,8 +1339,13 @@ FLEX
 -------------------------------------------------- */
 /*  fxrow-**
 -------------------------------------------------- */
+/* fxrow-** */
+/* fxrow-a*-** */
+/* fxrow-j*-** */
 /*  fxcol-**
 -------------------------------------------------- */
+/* fxcol-** */
+/* fxcol-a*-** */
 /*======================================================================
 POSITION
 ======================================================================*/
