--- a/sass/components/_link.scss
+++ b/sass/components/_link.scss
@@ -5,73 +5,6 @@ _link.scss
 /* Link      [lnk-***] 
 -------------------------------------------------- */
 
-/* .lnk-txt--**
--------------------------------------------------- */
-.lnk-txt--thema,
-.lnk-txt--subNav,
-.lnk-txt--mainNav,
-.lnk-txt--megaNav,
-.lnk-txt--footer {
-    display: inline-block;
-    color: inherit;
-    -webkit-transition: all .2s;
-    transition: all .2s;
-    
-    & > a {
-        display: block;
-        color: inherit;
-    }
-    
-    &::after{
-        content: "";
-        display:block;
-        top:0;
-        left:0;
-        width: 100%;
-        height: 3px;
-        background-color: $color-t1;
-        border-radius: 5px;
-        @include transform-scX(0);
-        @include transition(.15s);
-    }
-    
-    &:hover::after{
-        @include transform-scX(1);
-    }
-    
-    & [class*="ti-"] {
-        margin-left: 5px;
-        color: $color-t1;
-        font-size: 1.1rem;
-    }  
-}
-
-/* Nav */
-.lnk-txt--subNav{
-    color: $color-b1;
-}
-
-.lnk-txt--mainNav{
-    color: $color-b1;
-    
-    &:hover{
-        border-bottom: 3px solid currentColor;
-    }
-}
-
-.lnk-txt--megaNav{
-    color: #fff !important;
-    span{color: $color-t1 !important;}
-}
-
-/* thema */
-.lnk-txt--thema{
-    color: $color-t1 !important;
-    margin-bottom: 5px;
-}
-
-
-
 /* -----------------------------------------------
 /* Button    [btn-***]
 -------------------------------------------------- */
@@ -85,129 +18,33 @@ _link.scss
 
 @media (min-width: $bp-sm) {
     .wrap-btn {
-        margin-top: 5rem;
+        margin-top: 50px;
     }
 }
 
 /*  btn-type
 -------------------------------------------------- */
-
-.btnPrim--header,
-.btnPrim--headerSP,
-.btnPrim--white,
-.btnPrim--thema,
-.btnPrim--plan-red,
-.btnPrim--plan-grey,
-.btnPrim--contact {
+.btnPrim--thema {
     @include infxrow-ac-jc;
     -webkit-user-select: none;
     position: relative;
-    min-width: 270px;
-    height: 55px;
-    border-radius: 15px;
-    border-bottom: solid 4px;
+    min-width: 300px;
+    height: 60px;
     color: currentColor;
-    font-size: 1.8rem;
-    font-weight: 500;
-    letter-spacing: .1rem;
+    font-size: 1.5rem;
+    font-weight: 400;
+    letter-spacing: 1.5px;
     -webkit-transform: perspective(1px) translateZ(0);
     transform: perspective(1px) translateZ(0);
     @include transition(.1s);
     
     &:hover{
         opacity: .8;
-        @include transform-trY(1px);
-    }
-    
-    &:active{
-        border-bottom: none;
-    }
-}
-
-/* header */
-.btnPrim--header {
-    min-width: 200px;
-    height: 48px; 
-    color: $color-b1 !important;
-    background-color: $color-s1;
-    border-color: #d39906;
-    
-    &SP{
-        min-width: 60px;
-        height: 60px; 
-    }
-}
-
-.btnPrim--headerSP {
-    z-index: 200;
-    position: absolute;
-    top: 8px;
-    right: 80px;
-    width: 160px;
-    height: 45px;
-    font-size: 1.4rem;
-    background-color: $color-s1;
-    border-color: #d39906;
-}
-@media (min-width: $bp-md){
-    .btnPrim--headerSP {
-        display: none;
-    }
-}
-
-/* white */
-.btnPrim--white {
-    color: $color-t1 !important;
-    background-color: #fff;
-    border: 4px solid $color-t1;
-    
-    &:hover{
-        color: #fff !important;
-        background-color: $color-t1;
-    }
-}
-
-@media (min-width: $bp-md){
-    .btnPrim--white {
-        color: $color-t1 !important;
-        background-color: #fff;
-        border: 4px solid $color-t1;
-        margin-bottom: 10px;
     }
 }
 
 /* thema */
 .btnPrim--thema {
-    background-color: $color-t1;
-    border-color: #65010d;
     color: #fff !important;
-}
-
-/* contact */
-.btnPrim--contact {
-    width: 100%;
-    height: 70px; 
-    font-size: 2.8rem;
-    color: $color-b1 !important;
-    background-color: $color-s1;
-    border-color: #d39906;
-}
-
-/* plan */
-.btnPrim--plan { 
-    &-red{
-        width: 100%;
-        height: 40px;
-        color: #fff !important;
-        background-color: $color-t1;
-        border-color: #65010d;
-    }
-    
-    &-grey{
-        width: 100%;
-        height: 40px;
-        color: #fff !important;
-        background-color: #404040;
-        border-color: #111;
-    }
+    @include gradient-bg-t1;
 }
