--- a/sass/components/_page.scss
+++ b/sass/components/_page.scss
@@ -5,564 +5,134 @@ _page.scss
 /* -----------------------------------------------
 /* topPage     [h-***]
 -------------------------------------------------- */
-/*  speech
+
+
+/*  serviceHeader
 -------------------------------------------------- */
-.speech{
-    font-size: 1.6rem;
-    @include fxcol-ac-jc;
-    
-    &__ttl{
-        padding: 10px;
-        margin-bottom: 30px;
-        text-align: center;
-        line-height: 1.3;
-        border: 2px solid #fff;
+.serviceHeader{
+    &__img{
         position: relative;
-        @include fxrow-ac-jc;
-        
-        &::after{
-            content: "";
-            position: absolute;
-            top: 60px;
-            left: 50%;
-            transform: translateX(-50%);
-            /* 三角マークの形成 */
-            width: 0;
-            border-top: 10px solid #fff;
-            border-left: 8px solid transparent;
-            border-right: 8px solid transparent; 
-        }
+        padding-top: 50%;
+        margin-top: 30px;
+        box-shadow: 20px 20px 60px rgb(0 0 0 / 10%);
     }
     
-    &__itm{
-        @include fxrow;
-    }
-    
-    [class*=col-]{
-        margin-bottom: 20px;
-    }
-    
-    [class*=ti-]{
-        color: $color-s1;
-        font-weight: 700;
-        margin-top: 6px;
-        margin-right: 10px;
-    }
-}
-
-
-@media (min-width: $bp-md) {  
-    .speech{
-        font-size: 1.8rem;
-        
-        &__ttl{
-            &::after{
-                top: 67px;
-            }
-        }
-    }
-}
-
-
-/*  point--1,point--2
--------------------------------------------------- */
-.point--1,
-.point--2{
-    position: relative;
-    padding: 30px 0;
-    background-color: $color-g1;
-    
-    .pointBody{
-        @include fxcol-ac-jc;
-    }
-    
-    .pointTxt{
-        &__ttl{
-            margin-bottom: 20px;
-            
-            h2{
-                font-size: 3rem;
-                line-height: 1.3;
-                font-weight: 500;
-            }
-            
-            &::before{
-                content: "";
-                color: $color-t1;
-                font-size: 1.4rem;
-                font-weight: 600;
-            }
-        }
-        
-        &__lead{
-            font-size: 2rem;
-            font-weight: 500;
-            margin-bottom: 20px;
-        }
-        
-        .wrap-btn{
-            display: none;    
-        }  
-    }
-}
-
-/* point--1 */
-.point--1{
-    .pointTxt{
-        &__ttl{
-            &::before{content: "POINT 1";}
-        }
-    }
-    
-    .pointIllust {
-        @include fxcol-ac-jc;
-        margin-top:25px;
-        margin-bottom:25px;
-        
-        .step{
-            @include fxcol-ac-jc;
-            padding: 15px;
-            width: 100%;
-            max-width: 500px;
-            background-color: #fff;
-            border: 2px solid $color-g2;
-            border-radius: 5px;
-            
-            &__num{
-                padding: 5px 10px;
-                color: #fff;
-                background-color: #333;
-                border-radius: 3px;
-                text-transform: uppercase;
-            }
-            
-            &__illust{
-                padding: 5px 0;
-            }
-            
-            &__ttl{
-                text-align: center;
-                font-size: 1.6rem;
-                font-weight: 500;
-            }
-            
-            &__txt{
-                font-size: 1.2rem;
-            }
-        }
-        
-        .stepArr{padding: 10px 0;}
-    }
-}
-
-/* point--2 */
-.point--2{
-    .pointTxt{
-        &__ttl{
-            &::before{content: "POINT 2";}
-        }
-    }
-    
-    .pointIllust{
-        max-width: 315px;
-        margin:25px 0;
-        
-        .analysis{
-            position: relative;
-            @include fxcol-ac-jsb;
-            padding: 15px;
-            margin-bottom: 15px;
-            width: 100%;
-            height: 180px;
-            background-color: #fff;
-            border: 2px solid $color-g2;
-            border-radius: 5px;
-            
-            &__num{
-                text-align: center;
-                padding: 5px 10px;
-                font-size: 1rem;
-                color: #fff;
-                background-color: $color-t1;
-                border-radius: 3px;
-            }
-            
-            &__illust{
-                padding: 8px 0;
-            }
-            
-            &__txt{
-                font-size: 1.2rem;
-                span{color: $color-t1}
-            }
-            
-            &__arr--first,
-            &__arr--second{
-                position: absolute;
-                bottom:-50px;
-                @include fxrow-ac-jsb;
-                @include transform-ro(90deg);
-                
-                .arrLine{
-                    border-top: 3px dotted $color-t1;
-                    width: 70px;
-                } 
-                
-                [class*="ti-"]{
-                    color: $color-t1;
-                }
-            }
-            
-            &__arr--first{left:61px;}
-            &__arr--second{left:171px;}
-            
-        }
-        
-        .phaseBox{
-            @include fxrow-ac-jsb;
-            
-            .phase{
-                @include fxcol-ac-jsb;
-                padding: 15px;
-                max-width: 33.333%;
-                height: 180px;
-                background-color: #fff;
-                border: 2px solid $color-g2;
-                border-radius: 5px;
-                
-                &__num{
-                    text-align: center;
-                    font-size: 1rem;
-                    padding: 5px 10px;
-                    color: #fff;
-                    background-color: #333;
-                    border-radius: 3px;
-                }
-            }
-            
-            .stepArr{
-                width: 15px;
-                @include transform-ro(-90deg);
-            }
-        }
-        
-    }
-}
-
-@media (min-width: $bp-md) {  
-    .point--1,
-    .point--2{
-        background: none;
-        
-        .pointBody{
-            z-index: 1;
-        }
-        
-        .pointTxt{
-            &__ttl{
-                h2{font-size: 4rem;}
-            }
-            
-            &__lead{
-                font-size: 2.2rem;
-            }
-            
-            .wrap-btn{
-                @include fxrow-js;
-            } 
-        }
-        
-        .pointIllust {
-            margin-top: 140px;
-            margin-bottom: 0px;
-            padding: 0;
-            height: auto;
-            
-            & + .wrap-btn{
-                display: none;    
-            } 
-        }
-    }
-    
-    /* point--1 */
-    .point--1{
-        .pointBg{
-            background-color: $color-g1;
-            border-radius: 10px;
-            width: 1500px;
-            height: 355px;
-            position: absolute;
-            top: 145px;
-            left: 230px;
-        }
-        
-        .pointIllust {
-            .step{
-                @include fxrow-ac-jsb;
-                
-                &__illust{padding: 0;}
-                
-                &__content{width: 250px;}
-                
-                &__ttl{text-align: left;}
-            }
-        }
-    }
-    
-    /* point--2 */
-    .point--2{
-        @include --fxdir-row--rev;
-        
-        .pointBg{
-            background-color: $color-g1;
-            border-radius: 10px;
-            width: 1500px;
-            height: 355px;
-            position: absolute;
-            top: 145px;
-            right: 230px;
-        }
-        
-        .pointIllust{
-            max-width: 550px;
-            
-            .analysis{
-                @include fxrow-ac-jsb;
-                height: 90px;
-                
-                &__num{
-                    font-size: 1.2rem;
-                    width: 150px;
-                }
-                
-                &__illust{
-                    padding: 0 20px;
-                }
-                
-                &__arr--first{left:128px;}
-                &__arr--second{left:311px;}
-                
-            }
-            
-            .phaseBox{
-                @include fxrow-ac-jsb;
-                
-                .phase{
-                    @include fxcol-ac-jsb;
-                    padding: 15px;
-                    width: 100%;
-                    
-                    &__num{
-                        width: 100%;
-                        font-size: 1.2rem;
-                    }
-                }
-            }
-            
-        }
-    }
-}
-
-
-/*  point--3
--------------------------------------------------- */
-.point--3{
-    padding: 30px 0;
-    background-color: $color-g1;
-    
-    [class*="col-"]{
-        margin-bottom: 20px;
-    }
-    
-    .pointTxt{
-        &__ttl{
-            h2{
-                &::before{
-                    content: "POINT 3";
-                    color: $color-t1;
-                    font-size: 1.4rem;
-                    font-weight: 600;
-                }
-            }
-        }
-    }
-    
-    
-    .performance{
-        text-align: center;
-        color: $color-t1;
-        
-        &__txt{
-            line-height: 1.1;
-            
-            span{
-                font-size: 2.5rem;
-                font-weight: 700;
-            }
-            
-        }
+    &__photo{
+        @include po--ac;
+        @include bgimg--cv("../images/service--app.jpg");
+        width: 100%;
+        height: 100%;
     }
 }
 
 @media (min-width: $bp-md) { 
-    .point--3{
-        border-radius: 10px;
-        
-        .performance{
-            &__txt{ 
-                span{
-                    font-size: 4.5rem;
-                    font-weight: 700;
-                }
-            }
+    .serviceHeader{
+        &__img{
+            margin-top: 50px;
         }
     } 
 }
 
-
-/*  contact
+/*  serviceContent
 -------------------------------------------------- */
-.contact{
-    @include fxcol-ac-jc;
-    text-align: center;
-    
-    &__ttl {
-        font-size: 2.0rem;
-        font-weight: 500;
-        margin-bottom: 20px;
+.serviceContent{
+    .service01,
+    .service02,
+    .service03{
+        background-color: #fff;
         
-        span{
-            color: $color-s1;
-            font-weight: 700;
-            letter-spacing: 3px;
-        }
-    }
-    
-    &__tel {
-        p{
-            font-size: 1.6rem;
+        &__content{
+            .row [class*="col"]{margin-bottom: 40px;}
         }
         
-        a{
-            font-size: 3rem;
-            font-weight: 500;
-            color: #fff;
-            border-bottom: 2px solid #fff;
+        /*  serviceDesc */
+        .serviceDesc__img{
+            position: relative;
+            padding-top: 50%;
+            margin-top: 10px;
+            box-shadow: 20px 20px 60px rgb(0 0 0 / 10%);
         }
-    } 
-}
-
-@media (min-width: $bp-md) {
-    .contact{
-        @include fxroww-ac;
-        
-        &__ttl {
+        .serviceDesc__photo{
+            @include po--ac;
+            @include bgimg--cv("../images/service--01.jpg");
             width: 100%;
-            font-size: 3.0rem;
-            margin-bottom: 0;
-            
-            br{display: none;}
+            height: 100%;
         }
         
-        &__tel {
-            width: 50%;
-            
-            p{
-                font-size: 1.8rem;
+        /*  serviceService */
+        .serviceService{
+            &__content{
+                max-width: 430px;
+                height: 320px;
+                padding: 15px;
+                margin-right: auto;
+                margin-left: auto;
+                border: 2px solid #183784;
+                @include fxcol-ac-jsa;
+                text-align: center;
+                h5{
+                    font-size: 1.7rem;
+                    font-weight: 500;
+                    color: #183784;
+                }
+                p{text-align: left;}
             }
-            
-            a{
-                font-size: 4rem;
+        }
+        
+        /*  serviceConsept */
+        .serviceConsept{
+            &__content{
+                dl{margin-bottom: 15px;}
+                dd{font-weight: 400; font-size: 1.2rem; line-height: 1.7;}
+                .arr-green{color: #019798; margin-right: 5px;}
+                .arr-purple{color: #8b4a8a; margin-right: 5px;}
+                .arr-oranged{color: #fe6665; margin-right: 5px;}
             }
         }
-        
-        &__btn {
-            width: 50%;
-        }
-    } 
-}
-
-
-
-/*  caseSlide
--------------------------------------------------- */
-.caseSlide{ 
-    
-    li{
-        padding: 0 7.5px;
     }
-    
-    .slick-prev,
-    .slick-next {
-        z-index: 5;
-        -webkit-transform: scale(1.5);
-        transform: scale(1.5);
-        
-        &:hover{
-            opacity: .8;
-        }
-    }
-    
-    .slick-prev:before,
-    .slick-next:before {
-        color: $color-t1;
-        opacity: 1;
-    }
-    
-    .slick-prev {left: -15px;}
-    .slick-next {right: -15px;}
-    
-    //スライド底辺からの距離
-    .slick-dots{
-        margin: 50px 0 0;
-        
-        //dots サイズと大きさ、デザイン
-        & li button:before{
-            color: $color-b1;
-        }
-        
-        & li.slick-active button:before{
-            color: $color-t1;
-        }
-    } 
 }
 
 
 @media (min-width: $bp-md) {
-    .caseSlide{ 
-        
-        .slick-prev,
-        .slick-next {
-            -webkit-transform: scale(2.5);
-            transform: scale(2.5);
-        }
-        
-        //スライド底辺からの距離
-        .slick-dots{
-            margin: 50px 0 0;
-            
-            //dots 同士の距離
-            li{
-                width: 80px;
+    .serviceContent{
+        .service01,
+        .service02,
+        .service03{
+            &__content{
+                .row [class*="col"]{margin-bottom: 50px;}
             }
             
-            //dots サイズと大きさ、デザイン
-            & li button:before{
-                content: "";
-                width: 80px;
-                height: 5px;
-                background-color: $color-b1;
-                border-radius: 10px;
+            .serviceDesc{
+                &__img{margin-top: 50px;}
             }
             
-            & li.slick-active button:before{
-                content: "";
-                background-color: $color-t1;
-                
+            .serviceService{
+                &__content{
+                    height: 370px;
+                    
+                    h5{
+                        font-size: 2.0rem;
+                        font-weight: 500;
+                        color: #183784;
+                    }
+                }
+            }  
+            
+            .serviceConsept{
+                &__content{
+                    margin-top: 50px;
+                    dl{margin-bottom: 15px;}
+                    dd{font-size: 1.4rem; line-height: 1.7;}
+                } 
             }
         } 
     }
 }
+
+
+
+
+
 
 /*  news
 -------------------------------------------------- */
