--- a/sass/components/_typography.scss
+++ b/sass/components/_typography.scss
@@ -137,7 +137,8 @@ _typography.scss
     -------------------------------------------------- */
     .ttl-lvl3 {
         position: relative;
-        margin-bottom: 30px;
+        margin-top: 40px;
+        margin-bottom: 20px;
         
         & > [class*="hdg-"] {
             color: #333;
@@ -146,7 +147,7 @@ _typography.scss
         }
         
         &::before{ 
-            content: "#01";
+            content: "";
             position:absolute;
             top: -45px;
             color: #bdbdbd;
@@ -157,6 +158,7 @@ _typography.scss
     
     @media (min-width: $bp-md) {
         .ttl-lvl3 {
+            margin-top: 60px;
             margin-bottom: 45px;
             
             &::before{ 
